[package]
name = "mutablex"
description = "A horrid macro for making mutables of X size"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository="https://github.com/tascord/mutable_x"

[lib]
proc-macro = true

[dependencies]
futures-signals = "0.3.33"
proc-macro2 = "1.0.70"
quote = "1.0.33"
static_assertions = "1.1.0"
syn = "2.0.40"
